[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.2", features = ["api-all", "system-tray"] }
anyhow = "1.0"
nanoid = "0.4.0"
signal-hook = "0.3.9"
lazy_static = "1.4.0"
tokio = { version = "1.7.1", features = ["time", "process"] }
regex = "1.5.4"
log = "0.4.14"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
